--- a/projeto/src/app/courses/course-list.component.html
+++ b/projeto/src/app/courses/course-list.component.html
@@ -1,6 +1,6 @@
 <h2>welcome</h2>
 
-<table class="table table-striped">
+<table class="table table-striped align-middle">
     <thead>
         <tr>
             <th>imagem</th>
@@ -13,7 +13,7 @@
     </thead>
     <tbody>
         <tr *ngFor="let item of courses">
-            <td>{{item.imageUrl}}</td>
+            <td><img src="{{item.imageUrl}}" alt="brands" width="{{item.imgWidth}}"></td>
             <td>{{item.name}}</td>
             <td>{{item.price}}</td>
             <td>{{item.code}}</td>
