--- a/projeto/src/app/courses/course-list.component.css
+++ b/projeto/src/app/courses/course-list.component.css
@@ -1,3 +1,11 @@
 h2{
     margin: 50px 0 30px 0;
 }
+.row{
+    margin-bottom: 20px;
+}
+.pesquisa:focus{
+    outline: none;
+    border: 1px solid lightblue;
+    box-shadow: none;
+}
