--- a/projeto/src/app/courses/course-list.component.html
+++ b/projeto/src/app/courses/course-list.component.html
@@ -1,9 +1,10 @@
 <h2>Lista de cursos</h2>
 
 <div class="form-group row">
-    <label for="col-sm-2 col-from-label">Pesquisar cursos:</label>
+    <label for="col-sm-2
+     col-from-label">Pesquisar cursos:</label>
 
-    <div class="col-sm-6">
+    <div class="col-sm-10">
         <input [(ngModel)]="filtro" class="form-control pesquisa">
     </div>
 </div>
